# zero2prod

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DEPLOYMENT.md  Dockerfile  configuration.ci.yaml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  ci.yaml  prod.yaml
migrations/: 20251221092717_create_subscriptions_table.sql
scripts/: init_db.sh  prod.sh  run.sh  test.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  subscriptions.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
tests/common/: mod.rs
