[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0.100"
chrono = "0.4.42"
config = "0.15.19"
reqwest = "0.12.26"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]
