[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0.100"
chrono = "0.4.42"
config = "0.15.19"
reqwest = { version = "0.12.26", features = ["json", "rustls-tls"] }
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7.0"
uuid = { version = "1.19.0", features = ["v4"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
claims = "0.8.0"
validator = "0.20.0"
fake = "4.4.0"
rand = "0.9.2"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]


[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
serde_json = "1.0.147"
wiremock = "0.6.5"
